--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
             <section>
                 <h2>Projetos</h2>
                 <div class="project">
+                    <h3>My CV</h3>
+                    <p>Site com o currículo online. Desenvolvido com HTML e CSS no curso StepOne (Adriana Saty).</p>
+                    <p>Confira o código fonte <a href="https://github.com/gabrielzemuner/my-cv" target="_blank">aqui.</a></p>
+                </div>
+                <div class="project">
                     <h3>My links</h3>
                     <p>Site para centralizar os links mais importantes em um só lugar. Desenvolvido com HTML e CSS no
                         curso StepOne (Adriana Saty).</p>
-                    <p>Confira o resultado <a href="" target="_blank">aqui</a> e o código fonte <a href=""
-                            target="_blank">aqui.</a></p>
-                </div>
-                <div class="project">
-                    <h3>My CV</h3>
-                    <p>Site com o currículo online. Desenvolvido com HTML e CSS no curso StepOne (Adriana Saty).</p>
-                    <p>Confira o resultado <a href="https://gabrielzemuner.github.io/my-links/" target="_blank">aqui</a> e o código fonte <a href="https://github.com/gabrielzemuner/my-links"
-                        target="_blank">aqui.</a></p>
+                    <p>Confira o resultado <a href="https://gabrielzemuner.github.io/my-links/" target="_blank">aqui</a>
+                        e o código fonte <a href="https://github.com/gabrielzemuner/my-links" target="_blank">aqui.</a>
+                    </p>
                 </div>
             </section>
             <p class="last-date">Última atualização: 21/12/2022</p>
