--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="information-column">
-            <img src="images/avatar.jpg" alt="Foto de Gabriel sorrindo, homem, sorrindo, com fundo branco.">
+            <img src="images/avatar.jpg" alt="Foto de Gabriel, homem, sorrindo, com fundo branco.">
             <h1>Gabriel Zemuner</h1>
             <h2>Analista de Dados</h2>
             <hr>
